// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateHeaderObject should translate to IHttpHeaderParam 1`] = `
Object {
  "allowEmptyValue": true,
  "allowReserved": true,
  "content": Object {},
  "deprecated": true,
  "description": "descr",
  "encodings": Array [],
  "examples": Array [
    Object {
      "id": "#/headers/header-name/examples/a",
      "key": "a",
      "summary": "example summary",
      "value": "hey",
    },
    Object {
      "id": "#/headers/header-name/example",
      "key": "__default",
      "value": Object {},
    },
  ],
  "explode": true,
  "id": "#/headers/header-name",
  "name": "header-name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight-id": "#/headers/header-name",
  },
  "style": "simple",
}
`;

exports[`translateMediaTypeObject given complex nested media type object should translate correctly 1`] = `
Object {
  "encodings": Array [
    Object {
      "explode": true,
      "headers": Array [
        Object {
          "content": Object {
            "nested/media": Object {},
          },
          "description": "descr",
          "encodings": Array [],
          "examples": Array [
            Object {
              "key": "a",
              "summary": "example summary",
              "value": "hey",
            },
          ],
          "explode": false,
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
  },
}
`;

exports[`translateMediaTypeObject given encodings should translate each encoding to array item 1`] = `
Object {
  "encodings": Array [
    Object {
      "allowReserved": true,
      "explode": true,
      "headers": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
    Object {
      "allowReserved": true,
      "explode": true,
      "headers": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "name": "h1",
          "style": "simple",
        },
      ],
      "mediaType": "text/plain",
      "property": "enc2",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
  },
}
`;

exports[`translateMediaTypeObject given multiple examples should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "id": Any<String>,
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "id": Any<String>,
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "x-stoplight-id": Any<String>,
  },
}
`;

exports[`translateMediaTypeObject given single example should translate to IHttpContent 1`] = `
Object {
  "encodings": Array [],
  "examples": Array [
    Object {
      "key": "default",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
  },
}
`;

exports[`translateMediaTypeObject should skip nullish headers 1`] = `
Object {
  "encodings": Array [
    Object {
      "explode": true,
      "headers": Array [],
      "mediaType": "text/plain",
      "property": "enc1",
      "style": "form",
    },
  ],
  "examples": Array [
    Object {
      "key": "example",
      "summary": "multi example",
      "value": "hey",
    },
  ],
  "mediaType": "mediaType",
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
  },
}
`;
